<resources>
    <string name="app_name">DrivingApp</string>
    <string name="authenticate_user">  Authenticate me as: </string>
    <string name="mobile_user"> Mobile User</string>
    <string name="security_guard"> Security Guard </string>
    <string name="emptyTitleToolbar"></string>
    <string name="webViewTitle"> SmartSecurity VideoSurveillance </string>
    <string name="phone">Phone</string>
    <string name="email_sg">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_user">Remember user</string>
    <string name="message_btn_create_account">Create account</string>
    <string name="message_title_create_account">Create an account</string>
    <string name="message_btn_sign_up">Sign up</string>
    <string name="terms">I agree to the Terms and Conditions and I have read the Privacy Policy of DrivingApp.</string>


    <!--Drawer and Tabs-->
    <string name="menu_home">Home</string>
    <string name="menu_speed">Driving View</string>
    <string name="menu_campus_map">Zone Map</string>
    <string name="menu_alerts">Today alerts</string>
    <string name="menu_my_campus">Zones</string>
    <string name="menu_my_location">My location</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_alerts_history">Alerts History</string>
    <string name="alert_location"> Alert Location</string>
    <string name="send_alert">Send Alert</string>
    <string name="menu_current_alerts">Current Alerts</string>


    <!--Messages-->
    <string name="message_valid_email">Email is not valid, please try again.</string>
    <string name="message_valid_password">Password is not valid, please try again.</string>
    <string name="message_user_not_found">Incorrect data, try again.</string>
    <string name="message_login_not_found">Failed to login.</string>
    <string name="message_undetected_zone">You are not in any zone.</string>
    <string name="message_no_alerts_show">This area has no alerts to show.</string>
    <string name="message_successful_sending">Successful sending.</string>
    <string name="message_failed_send">Failed to send.</string>
    <string name="message_empty_fields">Empty fields</string>
    <string name="message_passwords_incorrect">The passwords are incorrect, try again.</string>
    <string name="message_account_generated">Account generated successfully.</string>
    <string name="message_user_exists">The user already exists with this phone number.</string>

    <!--Dialog alerts-->
    <string name="message_alert_gps">GPS is disabled on the device. Do you want to enable?</string>
    <string name="button_enable_alert_gps">Enable GPS</string>
    <string name="message_alert_see_map">See on the map</string>
    <string name="message_alert_delete">Delete</string>
    <string name="message_is_driving_user_title">Are you inside a car?</string>
    <string name="message_is_driving_user_yes">Yes</string>
    <string name="message_is_driving_user_no">No</string>
    <string name="message_confirm_alert_title">Confirm alert sending</string>
    <string name="message_confirm_alert_subtitle">Do you want to send the alert?</string>

    <!--Message Permission -->
    <string name="message_title_showMessageOKCancel">Required Permissions</string>
    <string name="message_accept_showMessageOKCancel">Accept</string>
    <string name="message_cancel_showMessageOKCancel">Cancel</string>
    <string name="message_permission_denied">Some Permission is Denied</string>
    <string name="message_need_rationale">You need to grant access to</string>
    <string name="message_gps">GPS</string>
    <string name="message_read_phone">READ PHONE</string>

    <!--Message HomeFragment-->
    <string name="message_name_campus">Name Campus</string>
    <string name="message_address_campus">Address</string>
    <string name="message_any_campus">You are not in any campus.</string>
    <string name="message_not_road_segment">You are not in a road segment.</string>
    <string name="message_maximum">Maximum</string>
    <string name="message_minimum">Minimum</string>

    <!--FloatingActionButton-->
    <string name="message_floating_unknown">Unknown emergency</string>
    <string name="message_floating_accident">Car Accident</string>
    <string name="message_floating_traffic">Traffic Jam</string>

    <!--messages Alerts-->
    <string name="message_alert_category_accident">accident</string>
    <string name="message_alert_category_traffic">traffic</string>
    <string name="message_alert_description_maximum_speed">Speed limit</string>
    <string name="message_alert_description_current_speed">Vehicle speed</string>

    <!--Variables del slide-->
    <string name="message_title_accident_slide">Car Accident</string>
    <string name="message_title_traffic_slide">Traffic Jam</string>
    <string name="message_title_level_severity">Select the level of severity</string>
    <string name="message_severity_slide">Severity</string>
    <string name="message_severity_informational_slide">Informational</string>
    <string name="message_severity_low_slide">Low</string>
    <string name="message_severity_medium_slide">Medium</string>
    <string name="message_severity_high_slide">High</string>
    <string name="message_severity_critical_slide">Critical</string>

    <string name="message_edit_text_slide">Description</string>
    <string name="message_button_send_slide">Send Alert</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_driving_view">DrivingView</string>
    <string name="title_activity_zone_detail">Zone detail</string>
    <string name="message_no_accept_terms">You must to accept the terms and conditions.</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="viva_register">ViVA application</string>

    <string name="validation_phone_error">Please complete the phone number</string>
    <string name= "validation_empty_required_field">This field can not be empty</string>
    <string name= "validation_dont_match_passwords">The password does not match</string>

    <string name="loading_message">Loading...</string>


    <string name="have_account_question">Do you have an account?</string>

    <string name="have_account_button">I have an Account</string>
    <string name="have_not_account_button">I do not have an Account</string>
    <string name="create_account_as">  Create account as: </string>

    <string name="message_severity">Severity :</string>


</resources>
