<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_top" android:checkableBehavior="single">
        <item android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_menu"
            android:title="@string/menu_home"/>
        <item android:id="@+id/menu_speed"
            android:icon="@drawable/ic_speed"
            android:title="@string/menu_speed"/>
        <item android:id="@+id/menu_alerts"
            android:icon="@drawable/ic_my_alerts"
            android:title="@string/menu_alerts"/>
        <!--<item android:id="@+id/menu_history"
            android:icon="@drawable/ic_alerts_menu"
            android:title="@string/menu_current_alerts"/>-->
        <item android:id="@+id/menu_my_campus"
          android:icon="@drawable/ic_campus_menu"
          android:title="@string/menu_my_campus"/>
    </group>

    <group android:id="@+id/menu_bottom" android:checkableBehavior="none">
        <item android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout_menu"
            android:title="@string/menu_logout"/>
    </group>
</menu>