<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">



    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </LinearLayout>


    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/openMenuButton"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        app:fab_showShadow="true"
        app:fab_size="mini" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menuFloating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:fab_size="mini"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_icon="@drawable/baseline_notification_important_white_36"
        fab:menu_backgroundColor="@color/transparent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnFloatingUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sharp_warning_white_24"
            fab:fab_size="mini"
            fab:fab_label="@string/message_floating_unknown"
            style="@style/MenuButtonsUnknown"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnFloatingAccident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_car_collision"
            fab:fab_size="mini"
            fab:fab_label="@string/message_floating_accident"
            style="@style/MenuButtonsAccident"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnFloatingTraffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_traffic_white_24"
            fab:fab_size="mini"
            fab:fab_label="@string/message_floating_traffic"
            style="@style/MenuButtonsTraffic"/>

    </com.github.clans.fab.FloatingActionMenu>


    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:background="#E6E6E6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_options"
        />

</android.support.v4.widget.DrawerLayout>
