<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDefault"
    tools:context="mx.edu.cenidet.app.activities.SendManualAlertsActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/message_title_level_severity"
                android:textColor="@color/white"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnFloatingInformational"
                    style="@style/MenuButtonsInformational"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_alerts_menu"
                    fab:fab_elevationCompat="6dp"
                    fab:fab_shadowColor="#000"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnFloatingLow"
                    style="@style/MenuButtonsLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_alerts_menu"
                    fab:fab_elevationCompat="6dp"
                    fab:fab_shadowColor="#000"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnFloatingMedium"
                    style="@style/MenuButtonsMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_alerts_menu"
                    fab:fab_elevationCompat="6dp"
                    fab:fab_shadowColor="#000"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnFloatingHigh"
                    style="@style/MenuButtonsHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_alerts_menu"
                    fab:fab_elevationCompat="6dp"
                    fab:fab_shadowColor="#000"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnFloatingCritical"
                    style="@style/MenuButtonsCritical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_alerts_menu"
                    fab:fab_elevationCompat="6dp"
                    fab:fab_shadowColor="#000"
                    fab:fab_size="mini" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewSendAlert"
                android:layout_width="@dimen/img_width_height"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/img_width_height" />

            <TextView
                android:id="@+id/tvTitle"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSeverity"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"

                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDescriptionAlert"
                style="@style/EditTextStyleOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/message_edit_text_slide"
                android:inputType="text" />

            <Button
                android:id="@+id/btnSendAlert"
                style="@style/ButtonStyleOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/message_button_send_slide" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>